course page Explore Topics and Skills UI design fixes and testimonials spacing fixes

--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -179,7 +179,10 @@ img {
 input.error {
     border: none !important;
 }
-
+#block-coursepagetestimonialsblock .why-athena .testimonials {
+    position: relative;
+    top: 0;
+}
 
 .registeredTitle{
     text-align: center;
